Camlp4 Version 3.04
-------------------

- [24 Oct 01] Fixed incorrect locations in sequences.
- [24 Oct 01] Was erroneously compiled by the OCaml boot compiler instead
  of the generated ocamlc. Fixed.
- [15 Oct 01] Fixed some parsing differences between pa_o and ocamlyacc:
  in parsers, in labels.
- [12 Oct 01] Added missing bigarray syntax a.{b} (and Cie) in standard
  syntax (pa_o).

Camlp4 Version 3.03
-------------------

- [09 Oct 01] Fixed bug: the token !$ did not work. Fixed and completed
  some syntaxes of labels patterns. Added missing case in exception
  declaration (exception rebinding).
- [05 Oct 01] Fixed bug in normal syntax: when defining a constructor
  named "True" of "False" (capitalized, i.e. not like the booleans), it
  did not work.
- [04 Oct 01] Fixed some revised and quotation syntaxes in objects classes
  and types (cleaner). Cleaned up also several parts of the parsers.
- [02 Oct 01] In revised syntax, the warning for using old syntax for
  sequences is now by default. To remove it, the option -no-warn-seq
  of camlp4r has been added. Option -warn-seq has been removed.
- [07 Sep 01] Included Camlp4 in OCaml distribution.
- [06 Sep 01] Added missing pattern construction #t
- [05 Sep 01] Fixed bug in pa_o: {A.B.c = d} was refused.
- [26 Aug 01] Fixed bug: in normal and revised syntaxes, refused -1.0
  (minus float) as pattern.
- [24 Aug 01] Fixed bug: (a : b :> c) and ((a : b) :> c) were parsed
  identically.
- [20 Aug 01] Fixed configure script for Windows configuration.
- [10 Aug 01] Fixed bug: <:expr< 'a' >> did not work because of a typing
  problem.
- [10 Aug 01] Fixed bug in compilation process under Windows: the use of
  the extension .exe was missing in several parts in Makefiles and shell
  scripts.
- [09 Aug 01] Changed message error in grammar: in the case when the rule
  is: ....; tok1; tok2; .. tokn; ... (n terminal tokens following each other),
  where the grammar is locally LL(n), it displays now: